<resources>
    <string name="app_name">Горнушкин Александр</string>
    <string name="hint_phone">Мобильный телефон</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_github">Репозиторий</string>
    <string name="hint_vk">Профиль в vk</string>
    <string name="hint_about_me">О себе</string>
    <string name="text_phone">+7(953)798-13-83</string>
    <string name="text_email">alexandr.gornushkin@yandex.ru</string>
    <string name="text_github">github.com/Alexandr1973/DevIntensive</string>
    <string name="text_vk">vk.com/id172946960</string>
    <string name="text_about_me">Совершенно секретно Совершенно секретно Совершенно секретно Совершенно секретно
        Совершенно секретно Совершенно секретно Совершенно секретно Совершенно секретно
    </string>
</resources>